package dominio.prenda.estados;

public interface Estado {
  float precioModificado(float precioBase);
}
